A more practical wokflow

--- a/website/index.html
+++ b/website/index.html
@@ -10,5 +10,6 @@
     Github actions practice.........
     Authentic Kid Skills -----------
     Some more dummy content
+    <a href="localhost:8000">Local Server</a>
 </body>
 </html>
